Primera version de la pagina

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id = "presentacion">
         <div class ="presentacion">
     <h2>Presentación</h2>
-    <p>Hola, me llamo Mathias Huelmo, tengo 28 años y nací en Montevideo, Uruguay. Actualmente resido en Buenos Aires, Argentina. <br>
+    <p>Hola, me llamo Mathias Huelmo, tengo 28 años y nací en Montevideo, Uruguay. Vivo en la ciudad de Buenos Aires, Argentina. <br>
         Actualmente estoy estudiando la Tecnicatura Superior en Desarrollo de Software y el curso de Argentina Programa <br>
         ¡Bienvenidos a mi página web!</p>
 </div>
@@ -36,7 +36,7 @@
     <h2>Los diferentes lenguajes que estoy aprendiendo:</h2>
     
     <ul>
-        <li id="html"><img src="https://3con14.biz/html/_data/_config/html5.png" alt="Logo HTML5" width="80%" height="80%"></li>
+        <li id="html"><img src="img/html5.png" alt="Logo HTML5" width="80%" height="80%"></li>
         <li id="css" ><img src="img/CSS3.jpg" alt="css logo" width="80%" height="80%"></li>
         <li id="javascript"><img src="img/JavaScript.png" alt="logo JavaScript" width="80%" height="80%"></li>
         <li id="csharp"> <img src="img/csharp.png" alt="csharp logo" width="95%" height="95%"></li>
