--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </main>
 <footer class="centrado">    
     <div class="pieDePagina">
-    <p>Creador de la página: Mathias Huelmo. <img src="https://w7.pngwing.com/pngs/269/442/png-transparent-copyright-symbol-law-author-logo-copyright-text-trademark-words-phrases.png" alt="copyright logo" height="2%" width="2%"></p>
+    <p>Creador de la página: Mathias Huelmo. &copy;></p>
 </div>
 </footer>
     
