--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </main>
 <footer class="centrado">    
     <div class="pieDePagina">
-    <p>Creador de la página: Mathias Huelmo. &copy;></p>
+    <p>Creador de la página: Mathias Huelmo. &copy;</p>
 </div>
 </footer>
     
